# RNT

./: .gitignore  CMakeLists.txt  main.cpp
inc/: image.hpp  image_splitter.hpp  text.hpp
src/: image.cpp  image_splitter.cpp  text.cpp
